--- a/ASP.NET/ES02_AutoPostBack/ES02_AutoPostBack/ES02_AutoPostBack.csproj
+++ b/ASP.NET/ES02_AutoPostBack/ES02_AutoPostBack/ES02_AutoPostBack.csproj
@@ -97,7 +97,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>64669</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost:44379/</IISUrl>
+          <IISUrl>http://localhost:44379/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
