--- a/ASP.NET/ES04_SqlServer/ES04_SqlServer/ES04_SqlServer.csproj
+++ b/ASP.NET/ES04_SqlServer/ES04_SqlServer/ES04_SqlServer.csproj
@@ -63,11 +63,24 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="alunni.aspx" />
+    <Content Include="App_Data\DBScuola.mdf" />
+    <Content Include="App_Data\DBScuola_log.ldf">
+      <DependentUpon>DBScuola.mdf</DependentUpon>
+    </Content>
     <Content Include="index.aspx" />
+    <Content Include="materie.aspx" />
+    <Content Include="voti.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Code\AdoNetController.cs" />
+    <Compile Include="alunni.aspx.cs">
+      <DependentUpon>alunni.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="alunni.aspx.designer.cs">
+      <DependentUpon>alunni.aspx</DependentUpon>
+    </Compile>
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -75,7 +88,21 @@
     <Compile Include="index.aspx.designer.cs">
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
+    <Compile Include="materie.aspx.cs">
+      <DependentUpon>materie.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="materie.aspx.designer.cs">
+      <DependentUpon>materie.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="voti.aspx.cs">
+      <DependentUpon>voti.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="voti.aspx.designer.cs">
+      <DependentUpon>voti.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Web.Debug.config">
@@ -84,6 +111,19 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ES04_SqlServer.Controller\ES04_SqlServer.Controller.csproj">
+      <Project>{04645081-ba31-4783-bfcb-ff63b5622dcb}</Project>
+      <Name>ES04_SqlServer.Controller</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ES04_SqlServer.Model\ES04_SqlServer.Model.csproj">
+      <Project>{298d1ca4-6018-4e91-a64f-f86aa89fb915}</Project>
+      <Name>ES04_SqlServer.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Code\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
