--- a/helpers/SourceGenerators/SourceGenerators/SourceGenerators.csproj
+++ b/helpers/SourceGenerators/SourceGenerators/SourceGenerators.csproj
@@ -2,24 +2,27 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+		<LangVersion>10.0</LangVersion>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <!-- 👇 We don't want to reference the source generator dll directly in consuming projects -->
         <IncludeBuildOutput>false</IncludeBuildOutput>
+		<EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     </PropertyGroup>
-
+ 
+	
     <ItemGroup>
-      <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.7.0" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" >
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\SourceGenerators.Attributes\SourceGenerators.Attributes.csproj" />
-    </ItemGroup>
-  
-    <!-- This ensures the library will be packaged as a source generator when we use `dotnet pack` -->
-    <ItemGroup>
-      <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" 
-          PackagePath="analyzers/dotnet/cs" Visible="false" />
-    </ItemGroup>
-  
-
+	<!-- This ensures the library will be packaged as a source generator when we use `dotnet pack` -->
+	<ItemGroup>
+		<None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
+	</ItemGroup>
 </Project>
